Adicionada tradução ep en/pt para nova mensagem
Adicionada tradução ep en/pt para a nova mensagem a informar que o duelo não irá ser iniciado pois mapas "aim_" foram excluidos de poderem ser jogados nesse modo

--- a/addons/sourcemod/translations/abner_duel.phrases.txt
+++ b/addons/sourcemod/translations/abner_duel.phrases.txt
@@ -126,4 +126,9 @@
 		"pt" 		"segundos restantes."
 		"ru" 		"секунд осталось."
 	}
+	"No Duels allowed! (Aim map)"
+	{
+		"en"		"No Duels allowed! (Aim map)"
+		"pt"		"Duelo não permitido (Mapa de Aim)"
+	}
 }
